<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4CC9B"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bglay1"
        android:layout_margin="10dp" />

    <!-- Sidebar buttons -->
    <ScrollView
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnRecommendations"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_recommendations"
                    android:contentDescription="@string/recommend"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Coffee Button and Label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnCoffee"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/coffee"
                    android:contentDescription="@string/coffee"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Non-Coffee Button and Label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnNonCoffee"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/nocoffee"
                    android:contentDescription="@string/non_coffee"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_coffee"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Milk Tea Button and Label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnMilkTea"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/milktea"
                    android:contentDescription="@string/milk_tea"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milk_tea"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Fruit Tea Button and Label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnFruitTea"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/fruittea"
                    android:contentDescription="@string/fruit_tea"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fruit_tea"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Cream Cheese Button and Label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btnCreamCheese"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:src="@drawable/cheese"
                    android:contentDescription="@string/cream_cheese"
                    android:background="@drawable/custom_button_background"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cream_cheese"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Menu display -->
    <LinearLayout
        android:id="@+id/menuContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/cartSection"
        android:layout_toEndOf="@id/sidebar"
        android:padding="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <!-- TextView for Category Title -->
        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <!-- Fragment Container -->
        <FrameLayout
            android:id="@+id/menuFragmentContainer"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_background"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- Cart section with title and scrollable items -->
    <LinearLayout
        android:id="@+id/cartSection"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/btnClearCart">

        <ScrollView
            android:id="@+id/cartContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/cartItemsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">
                <!-- Items will be dynamically added here -->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnClearCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/menuContainer"
        android:layout_alignBottom="@id/cartSection"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/btnCheckout"
        android:background="@drawable/custom_button_background"
        android:src="@drawable/ic_clear"
        android:text="Clear Cart" />

    <!-- Checkout button -->
    <ImageButton
        android:id="@+id/btnCheckout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/menuContainer"
        android:src="@drawable/baseline_shopping_cart_checkout_24"
        android:contentDescription="@string/checkout"
        android:background="@drawable/custom_button_background"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/cartSection"
        android:layout_marginEnd="15dp" />

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        style="@style/CustomBottomNavigationView" />

</RelativeLayout>
